chore(name): update references

--- a/views/main.ejs
+++ b/views/main.ejs
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>NateLogg</title>
+        <title>TraceLogg</title>
         <link rel="stylesheet" href="/static/jquery-ui-1.11.4.custom/jquery-ui.min.css">
         <link rel="stylesheet" type="text/css" href="/static/style/main.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
